<resources>
    <string name="app_name">校园共享</string>

    <string name="login">登录</string>
    <string name="logging">登录中</string>
    <string name="register">注册</string>
    <string name="register_now">注册中</string>
    <string name="tip_register">还没有帐号？点击注册»</string>
    <string name="tip_login">已有帐号？点击登录»</string>
    <string name="hint_input_username">请输入账号</string>
    <string name="hint_input_phone">请输入手机号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_input_password1">请输入确认密码</string>
    <string name="hint_input_code">请输入验证码</string>
    <string name="reset_password">重置密码</string>
    <string name="tip_input_username">账号不能为空！</string>
    <string name="tip_input_phone">手机号不能为空！</string>
    <string name="tip_input_password">密码不能为空！</string>
    <string name="tip_input_new_password">新密码不能为空！</string>
    <string name="tip_input_code">验证码不能为空！</string>
    <string name="code">获取验证码</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="login_failed">登录失败</string>
    <string name="no_user">用户不存在</string>
    <string name="wrong_password">密码错误</string>
    <string name="wrong_phone">请输入正确的手机号</string>
    <string name="password_illegal">密码只能包含字母、数字或下划线</string>
    <string name="register_failed">注册失败</string>
    <string name="phone_used">手机号已被注册</string>

    <string name="friends">好友</string>
    <string name="trend">动态</string>
    <string name="mine">我的</string>
    <string name="search">搜索</string>
    <string name="new_friend">新朋友</string>
    <string name="my_friend">我的好友</string>
    <string name="upload_avatar">上传头像</string>
    <string name="from_gallery">从相册选择</string>
    <string name="take_photo">拍照</string>

    <string-array name="personal_data">
        <item>昵称</item>
        <item>性别</item>
        <item>生日</item>
        <item>所在地</item>
        <item>职业</item>
        <item>签名</item>
    </string-array>
    <string name="select_time">选择时间</string>
</resources>
