<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/avatar_pop"
    android:orientation="vertical">

    <Button
        android:id="@+id/gallery_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from_gallery" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="#D9D9D9" />

    <Button
        android:id="@+id/photo_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="6dp"
        android:background="#D9D9D9" />

    <Button
        android:id="@+id/cancel_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>